third_year/programming_languages_and_paradigms/project_2/PL-version/examples/bad/zmienna-poza-zasiegiem.hml
let x = y + 31 in
let y = 2 in
x